--- a/.github/workflows/validations.yml
+++ b/.github/workflows/validations.yml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install dependencies and run tests
         run: |
           python3 -m venv env
-          source env/bin/activate; pip install --upgrade pip; pip install -r requirements.txt
-      - name: Test with pytest
-        run: |
+          source env/bin/activate
+          pip install --upgrade pip
+          pip install -r requirements.txt
           pytest -vvx tests
