--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-pandas==1.5.3
-lxml==4.9.2
-html5lib==1.1
-=======
+# Dependencies from badb166 branch
 attrs==23.2.0
 Automat==22.10.0
 Babel==2.10.3
@@ -83,4 +79,8 @@ urllib3==2.0.7
 wadllib==1.3.6
 wheel==0.42.0
 zope.interface==6.1
->>>>>>> badb166 (Update and Rearrange Reop)
+
+# Dependencies from HEAD branch (only if they are not already included)
+pandas==1.5.3
+lxml==4.9.2
+html5lib==1.1
