--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ colorama==0.4.6
 configobj==5.0.8
 constantly==23.10.4
 cryptography==41.0.7
-dbus-python==1.3.2
+# dbus-python==1.3.2
 distro==1.9.0
 distro-info==1.7+build1
 ec2-hibinit-agent==1.0.0
